--- a/assets/_scss/main.scss
+++ b/assets/_scss/main.scss
@@ -34,3 +34,4 @@
 @import "vendor/font-awesome/font-awesome";
 @import "vendor/magnific-popup/magnific-popup";
 @import "print";
+@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
