--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -13,4 +13,6 @@
 
   <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ base_path }}{{ page.url }}" class="btn btn--linkedin" title="{{ site.data.ui-text[site.locale].share_on_label | default: 'Share on' }} LinkedIn"><i class="fa fa-fw fa-linkedin" aria-hidden="true"></i><span> LinkedIn</span></a>
  
+  <a href="https://www.weibo.com/share?url={{ base_path }}{{ page.url }}" class="btn btn--weibo" title="{{ site.data.ui-text[site.locale].share_on_label | default: 'Share on' }} 新浪微博"><i class="fa fa-fw fa-weibo" aria-hidden="true"></i><span> 新浪微博</span></a>
+ 
 </section>
