--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -95,7 +95,7 @@
         <li><a href="https://codepen.io/{{ author.codepen }}"><i class="fa fa-fw fa-codepen" aria-hidden="true"></i> CodePen</a></li>
       {% endif %}
       {% if author.jianshu %}
-        <li><a href="https://http://www.jianshu.com/u/{{ author.jianshu }}"><i class="fa fa-fw fa-weibo" aria-hidden="true"></i>Jianshu</a></li>
+        <li><a href="http://www.jianshu.com/u/{{ author.jianshu }}"><i class="fa fa-fw fa-weibo" aria-hidden="true"></i>Jianshu</a></li>
       {% endif %}      
       {% if author.vine %}
         <li><a href="https://vine.co/u/{{ author.vine }}"><i class="fa fa-fw fa-vine" aria-hidden="true"></i> Vine</a></li>
